Fix alignment of header elements

--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
     flex: 1;
 }
 
+.header {
+    display: flex;
+    align-items: center;
+}
+
 .one {
     background-color: #1F2937
 }
@@ -33,8 +38,14 @@ body {
     font-weight: bold;
 }
 
+.push-right {
+    margin-left: auto;
+}
+
 ul {
+    display: flex;
     list-style-type: none;
+    gap: 15px;
 }
 
 a {
